fixed spacing for p-scrolltop

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,10 @@
     --p-tag-color: #334155 !important; /* slate-700 */
   }
 }
+
+@layer base {
+  html, body {
+    overflow-x: hidden;
+  }
+}
+
